# pile

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_loss.md  feature_request.md
.github/workflows/: build.yml
assets/: Info.plist  pile.icns
assets/linux/: ai.opencode.pile.desktop  ai.opencode.pile.metainfo.xml
benches/: benchmarks.rs  common.rs
docs/: ARCHITECTURE.md  COMMANDS.md  LANGUAGE_DETECTION.md  NON_GOALS.md  PERFORMANCE_INVARIANTS.md  RELEASING.md  UPDATES.md
scripts/: generate-release-manifest.sh  package-linux.sh  package-macos.sh  package-windows.ps1  release.sh
src/: app.rs  cli.rs  command.rs  command_palette.rs  editor.rs  grammar_registry.rs  lib.rs  macos_window.rs  main.rs  model.rs  native_menu.rs  parse_worker.rs  persistence.rs  preferences.rs  search.rs  settings.rs  stress_tests.rs  syntax.rs  syntax_highlighting.rs  tab_switcher.rs  theme.rs  update.rs
src/app/: commands.rs
src/editor/: geometry.rs  input.rs  layout.rs  line_ops.rs  minimap.rs  motion.rs  multicursor.rs  ops.rs  replace.rs  tests.rs
src/editor/tests/: editing.rs  layout_tests.rs  motion.rs  replace_undo.rs  selection.rs
src/model/: app_state.rs  document.rs  session.rs  tests.rs  undo.rs
src/persistence/: tests.rs
tests/: platform_menu_tests.rs  property_tests.proptest-regressions  property_tests.rs  shortcut_matrix_tests.rs  ui_smoke_tests.rs
tests/golden/: search_replace_golden.rs
