[package]
name = "pile"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "A minimalist infinite scratchpad editor."

[dependencies]
eframe = "0.33.3"
egui = { version = "0.33.3", features = ["serde"] }

crop = { version = "0.4.3", features = ["serde"] }
unicode-segmentation = "1.12"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
directories = "6.0.0"
atomic-write-file = "0.3.0"

crossbeam-channel = "0.5.15"
parking_lot = "0.12"

tree-sitter = "0.26.8"
tree-sitter-highlight = "0.26.7"
tree-sitter-md = "0.5.3"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.25"

content_inspector = "0.2.4"
uuid = { version = "1.23", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.19.1", default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 2
